--- a/dagre-d3/demo/arrows.html
+++ b/dagre-d3/demo/arrows.html
@@ -40,8 +40,8 @@ body {
 var g = new dagreD3.graphlib.Graph().setGraph({});
 
 ["normal", "vee", "undirected"].forEach(function(arrowhead) {
-  g.setNode(arrowhead + "1", { label: " " });
-  g.setNode(arrowhead + "2", { label: " " });
+  g.setNode(arrowhead + "1", { label: " 111" });
+  g.setNode(arrowhead + "2", { label: " 222" });
   g.setEdge(arrowhead + "1", arrowhead + "2", {
     arrowhead: arrowhead,
     label: arrowhead
